@@ -16,11 +16,8 @@ import jakarta.enterprise.context.Dependent;
 import jakarta.inject.Inject;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.TypedQuery;
-import no.nav.fpsak.tidsserie.LocalDateInterval;
 import no.nav.fpsak.tidsserie.LocalDateSegment;
-import no.nav.fpsak.tidsserie.LocalDateSegmentCombinator;
 import no.nav.fpsak.tidsserie.LocalDateTimeline;
-import no.nav.k9.sak.behandlingslager.behandling.EndringsresultatSnapshot;
 import no.nav.k9.sak.domene.typer.tid.TidslinjeUtil;
 import no.nav.k9.sak.kontrakt.sykdom.SykdomVurderingType;
 import no.nav.k9.sak.kontrakt.sykdom.dokument.SykdomDokumentType;
@@ -31,9 +28,9 @@ import no.nav.k9.sak.ytelse.pleiepengerbarn.repo.sykdom.Person;
 import no.nav.k9.sak.ytelse.pleiepengerbarn.repo.sykdom.PersonRepository;
 import no.nav.k9.sak.ytelse.pleiepengerbarn.repo.sykdom.pleietrengendesykdom.PleietrengendeSykdomDiagnoser;
 import no.nav.k9.sak.ytelse.pleiepengerbarn.repo.sykdom.pleietrengendesykdom.PleietrengendeSykdomDokument;
+import no.nav.k9.sak.ytelse.pleiepengerbarn.repo.sykdom.pleietrengendesykdom.PleietrengendeSykdomDokumentRepository;
 import no.nav.k9.sak.ytelse.pleiepengerbarn.repo.sykdom.pleietrengendesykdom.PleietrengendeSykdomInnleggelser;
 import no.nav.k9.sak.ytelse.pleiepengerbarn.repo.sykdom.pleietrengendesykdom.PleietrengendeSykdomVurderingVersjon;
-import no.nav.k9.sak.ytelse.pleiepengerbarn.repo.sykdom.pleietrengendesykdom.PleietrengendeSykdomDokumentRepository;
 import no.nav.k9.sak.ytelse.pleiepengerbarn.repo.sykdom.pleietrengendesykdom.SykdomVurderingRepository;
 
 @Dependent
@@ -50,10 +47,10 @@ public class MedisinskGrunnlagRepository {
 
     @Inject
     public MedisinskGrunnlagRepository(
-           EntityManager entityManager,
-           SykdomVurderingRepository sykdomVurderingRepository,
-           PersonRepository personRepository,
-           PleietrengendeSykdomDokumentRepository pleietrengendeSykdomDokumentRepository) {
+        EntityManager entityManager,
+        SykdomVurderingRepository sykdomVurderingRepository,
+        PersonRepository personRepository,
+        PleietrengendeSykdomDokumentRepository pleietrengendeSykdomDokumentRepository) {
         this.entityManager = Objects.requireNonNull(entityManager, "entityManager");
         this.sykdomVurderingRepository = Objects.requireNonNull(sykdomVurderingRepository, "sykdomVurderingRepository");
         this.personRepository = Objects.requireNonNull(personRepository, "personRepository");
@@ -64,9 +61,9 @@ public class MedisinskGrunnlagRepository {
         final TypedQuery<Saksnummer> q = entityManager.createQuery(
             "SELECT distinct sgb.saksnummer "
                 + "FROM MedisinskGrunnlag as sgb "
-                +   "inner join sgb.pleietrengende as p "
+                + "inner join sgb.pleietrengende as p "
                 + "where p.aktørId = :aktørId"
-                , Saksnummer.class);
+            , Saksnummer.class);
 
         q.setParameter("aktørId", pleietrengende);
 
@@ -80,7 +77,7 @@ public class MedisinskGrunnlagRepository {
                 "   inner join sgb.grunnlagsdata as sg " +
                 "   inner join sg.søktePerioder as ssp " +
                 "where sgb.saksnummer = :saksnummer "
-                , MedisinskGrunnlagsdataSøktPeriode.class);
+            , MedisinskGrunnlagsdataSøktPeriode.class);
         q.setParameter("saksnummer", saksnummer);
 
         return q.getResultList();
@@ -95,7 +92,7 @@ public class MedisinskGrunnlagRepository {
             for (MedisinskGrunnlagsdataSøktPeriode periode : søktePerioder) {
                 Set<Saksnummer> sett = new HashSet<>();
                 sett.add(saksnummer);
-                segments.add(new LocalDateSegment<Set<Saksnummer>>(periode.getFom(), periode.getTom(), sett));
+                segments.add(new LocalDateSegment<>(periode.getFom(), periode.getTom(), sett));
             }
         }
 
@@ -118,7 +115,6 @@ public class MedisinskGrunnlagRepository {
         final LocalDateTimeline<Boolean> søktePerioderTidslinje = søktePerioderFraForrigeBehandling.union(vurderingsperioderTidslinje, (interval, s1, s2) -> new LocalDateSegment<>(interval, true)).compress();
 
         final List<Periode> søktePerioder = TidslinjeUtil.tilPerioder(søktePerioderTidslinje);
-        final List<Periode> revurderingsperioder = TidslinjeUtil.tilPerioder(TidslinjeUtil.kunPerioderSomIkkeFinnesI(søktePerioderTidslinje, søktePerioderFraForrigeBehandling));
 
         final List<PleietrengendeSykdomVurderingVersjon> vurderinger = hentVurderinger(pleietrengendeAktørId);
 
@@ -127,8 +123,8 @@ public class MedisinskGrunnlagRepository {
 
         final List<PleietrengendeSykdomDokument> sykdomDokumenter = pleietrengendeSykdomDokumentRepository.hentAlleDokumenterFor(pleietrengendeAktørId);
         final List<PleietrengendeSykdomDokument> godkjenteLegeerklæringer = sykdomDokumenter.stream()
-                .filter(d -> d.getType() == SykdomDokumentType.LEGEERKLÆRING_SYKEHUS)
-                .collect(Collectors.toList());
+            .filter(d -> d.getType() == SykdomDokumentType.LEGEERKLÆRING_SYKEHUS)
+            .collect(Collectors.toList());
 
         final boolean harAndreMedisinskeDokumenter = !sykdomDokumenter.isEmpty();
 
@@ -173,18 +169,19 @@ public class MedisinskGrunnlagRepository {
         final LocalDateTimeline<PleietrengendeSykdomVurderingVersjon> lasVurderinger = sykdomVurderingRepository.getSisteVurderingstidslinjeFor(SykdomVurderingType.LANGVARIG_SYKDOM, pleietrengende);
 
         final List<PleietrengendeSykdomVurderingVersjon> vurderinger = ktpVurderinger.stream().map(LocalDateSegment::getValue).distinct().collect(Collectors.toCollection(ArrayList::new));
-        vurderinger.addAll(tooVurderinger.stream().map(LocalDateSegment::getValue).distinct().collect(Collectors.toList()));
-        vurderinger.addAll(sluVurderinger.stream().map(LocalDateSegment::getValue).distinct().collect(Collectors.toList()));
-        vurderinger.addAll(lasVurderinger.stream().map(LocalDateSegment::getValue).distinct().collect(Collectors.toList()));
+        vurderinger.addAll(tooVurderinger.stream().map(LocalDateSegment::getValue).distinct().toList());
+        vurderinger.addAll(sluVurderinger.stream().map(LocalDateSegment::getValue).distinct().toList());
+        vurderinger.addAll(lasVurderinger.stream().map(LocalDateSegment::getValue).distinct().toList());
         return vurderinger;
     }
 
-    private LocalDateTimeline<Boolean> hentSøktePerioderFraForrigeBehandling(
-        final Optional<MedisinskGrunnlag> grunnlagFraForrigeBehandling) {
-        final LocalDateTimeline<Boolean> gamleSøktePerioder = grunnlagFraForrigeBehandling.map(sgb -> new LocalDateTimeline<Boolean>(
-            sgb.getGrunnlagsdata().getSøktePerioder().stream().map(p -> new LocalDateSegment<>(p.getFom(), p.getTom(), true)).collect(Collectors.toList())
-        )).orElse(new LocalDateTimeline<Boolean>(Collections.emptyList()));
-        return gamleSøktePerioder;
+    private LocalDateTimeline<Boolean> hentSøktePerioderFraForrigeBehandling(Optional<MedisinskGrunnlag> grunnlagFraForrigeBehandling) {
+        return grunnlagFraForrigeBehandling.map(sgb -> new LocalDateTimeline<>(sgb.getGrunnlagsdata()
+                .getSøktePerioder()
+                .stream()
+                .map(p -> new LocalDateSegment<>(p.getFom(), p.getTom(), true))
+                .collect(Collectors.toList())))
+            .orElse(new LocalDateTimeline<>(Collections.emptyList()));
     }
 
     public Optional<MedisinskGrunnlag> hentGrunnlagFraForrigeBehandling(Saksnummer saksnummer, UUID behandlingUuid) {
@@ -192,48 +189,21 @@ public class MedisinskGrunnlagRepository {
             .map(forrigeBehandling -> hentGrunnlagForBehandling(forrigeBehandling).orElseThrow());
     }
 
-    public EndringsresultatSnapshot finnAktivGrunnlagId(UUID behandlingUuid) {
-        var funnetId = hentGrunnlagForBehandling(behandlingUuid)
-            .map(MedisinskGrunnlag::getGrunnlagsdata)
-            .map(MedisinskGrunnlagsdata::getReferanse);
-
-        return funnetId
-            .map(id -> EndringsresultatSnapshot.medSnapshot(MedisinskGrunnlagsdata.class, id))
-            .orElse(EndringsresultatSnapshot.utenSnapshot(MedisinskGrunnlagsdata.class));
-    }
-
     public boolean harHattGodkjentLegeerklæringMedUnntakAv(AktørId pleietrengende, UUID behandlingUuid) {
         final TypedQuery<Long> q = entityManager.createQuery(
-                "select l.id "
+            "select l.id "
                 + "from MedisinskGrunnlag as sgb "
                 + "  inner join sgb.pleietrengende as p "
                 + "  inner join sgb.grunnlagsdata as g "
                 + "  inner join g.godkjenteLegeerklæringer as l "
                 + "where p.aktørId = :aktørId "
                 + "  and sgb.behandlingUuid <> :behandlingUuid"
-                , Long.class);
+            , Long.class);
 
         q.setParameter("aktørId", pleietrengende);
         q.setParameter("behandlingUuid", behandlingUuid);
 
         return !q.getResultList().isEmpty();
-    }
-
-    public Optional<UUID> hentSisteBehandling(Saksnummer saksnummer) {
-        final TypedQuery<UUID> q = entityManager.createQuery(
-            "Select sgb.behandlingUuid "
-                + "From MedisinskGrunnlag as sgb "
-                + "Where sgb.saksnummer = :saksnummer "
-                + "  And sgb.behandlingsnummer = ( "
-                + "    Select max(sgb2.behandlingsnummer) "
-                + "    From MedisinskGrunnlag as sgb2 "
-                + "    Where sgb2.saksnummer = :saksnummer "
-                + "  ) "
-            , UUID.class);
-
-        q.setParameter("saksnummer", saksnummer);
-
-        return q.getResultList().stream().findFirst();
     }
 
     Optional<UUID> hentSisteBehandlingMedUnntakAv(Saksnummer saksnummer, UUID behandlingUuid) {
@@ -269,18 +239,6 @@ public class MedisinskGrunnlagRepository {
             , MedisinskGrunnlag.class);
 
         q.setParameter("behandlingUuid", behandlingUuid);
-
-        return q.getResultList().stream().findFirst();
-    }
-
-    public Optional<MedisinskGrunnlagsdata> hentGrunnlagForId(UUID grunnlagReferanse) {
-        Objects.requireNonNull(grunnlagReferanse);
-        final TypedQuery<MedisinskGrunnlagsdata> q = entityManager.createQuery(
-            "SELECT sg "
-                + "FROM MedisinskGrunnlagsdata as sg "
-                + "WHERE sg.id = :id", MedisinskGrunnlagsdata.class);
-
-        q.setParameter("id", grunnlagReferanse);
 
         return q.getResultList().stream().findFirst();
     }
